sfdx-source/force-app/main/default/objects/Campaign/fields/Campaign_DRI_Email__c.field-meta.xml
<CustomField>
    <fullName>Campaign_DRI_Email__c</fullName>
    <description>LEM-21107 SMB UAT Triage: Ad Hoc | Enhancements to Mx Touchpoints</description>
    <label>Campaign DRI Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>