sfdx-source/force-app/main/default/objects/Campaign/fields/Campaign_Notes__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Notes__c</fullName>
    <description>LEM-21107 SMB UAT Triage: Ad Hoc | Enhancements to Mx Touchpoints</description>
    <label>Campaign Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>