sfdx-source/force-app/main/default/objects/Campaign/fields/Initiative_Type__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Type__c</fullName>
    <description>LEM-1595: Captures the type of Initiative</description>
    <label>Initiative Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Effort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>